src/antlr/express_antlr_js/simple_express/Express_simpleParser.js
// Generated from java-escape by ANTLR 4.11.1
// jshint ignore: start
import antlr4 from 'antlr4';
import Express_simpleListener from './Express_simpleListener.js';
import Express_simpleVisitor from './Express_simpleVisitor.js';



const atn = new antlr4.atn.ATNDeserializer().deserialize(serializedATN);

const decisionsToDFA = atn.decisionToState.map( (ds, index) => new antlr4.dfa.DFA(ds, index) );

const sharedContextCache = new antlr4.PredictionContextCache();

export default class Express_simpleParser extends antlr4.Parser {

    static grammarFileName = "java-escape";
    static literalNames = [ null, "';'", "'('", "','", "')'", "'+'", "'-'", 
                            "'['", "']'", "':'", "':='", "'.'", "'?'", "'**'", 
                            "'\\'", "'{'", "'}'", "'<'", "'<='", "'*'", 
                            "'/'", "'||'", "'<*'", "'|'", "'>'", "'>='", 
                            "'<>'", "'='", "':<>:'", "':=:'" ];
    static symbolicNames = [ null, null, null, null, null, null, null, null, 
                             null, null, null, null, null, null, null, null, 
                             null, null, null, null, null, null, null, null, 
                             null, null, null, null, null, null, "ABS", 
                             "ABSTRACT", "ACOS", "AGGREGATE", "ALIAS", "AND", 
                             "ANDOR", "ARRAY", "AS", "ASIN", "ATAN", "BAG", 
                             "BASED_ON", "BEGIN_", "BINARY", "BLENGTH", 
                             "BOOLEAN", "BY", "CASE", "CONSTANT", "CONST_E", 
                             "COS", "DERIVE", "DIV", "ELSE", "END_", "END_ALIAS", 
                             "END_CASE", "END_CONSTANT", "END_ENTITY", "END_FUNCTION", 
                             "END_IF", "END_LOCAL", "END_PROCEDURE", "END_REPEAT", 
                             "END_RULE", "END_SCHEMA", "END_SUBTYPE_CONSTRAINT", 
                             "END_TYPE", "ENTITY", "ENUMERATION", "ESCAPE", 
                             "EXISTS", "EXP", "EXTENSIBLE", "FALSE", "FIXED", 
                             "FOR", "FORMAT", "FROM", "FUNCTION", "GENERIC", 
                             "GENERIC_ENTITY", "HIBOUND", "HIINDEX", "IF", 
                             "IN", "INSERT", "INTEGER", "INVERSE", "LENGTH", 
                             "LIKE", "LIST", "LOBOUND", "LOCAL", "LOG", 
                             "LOG10", "LOG2", "LOGICAL", "LOINDEX", "MOD", 
                             "NOT", "NUMBER", "NVL", "ODD", "OF", "ONEOF", 
                             "OPTIONAL", "OR", "OTHERWISE", "PI", "PROCEDURE", 
                             "QUERY", "REAL", "REFERENCE", "REMOVE", "RENAMED", 
                             "REPEAT", "RETURN", "ROLESOF", "RULE", "SCHEMA", 
                             "SELECT", "SELF", "SET", "SIN", "SIZEOF", "SKIP_", 
                             "SQRT", "STRING", "SUBTYPE", "SUBTYPE_CONSTRAINT", 
                             "SUPERTYPE", "TAN", "THEN", "TO", "TRUE", "TYPE", 
                             "TYPEOF", "TOTAL_OVER", "UNIQUE", "UNKNOWN", 
                             "UNTIL", "USE", "USEDIN", "VALUE_", "VALUE_IN", 
                             "VALUE_UNIQUE", "VAR", "WITH", "WHERE", "WHILE", 
                             "XOR", "BinaryLiteral", "EncodedStringLiteral", 
                             "IntegerLiteral", "RealLiteral", "SimpleId", 
                             "SimpleStringLiteral", "EmbeddedRemark", "TailRemark", 
                             "Whitespace" ];
    static ruleNames = [ "attributeRef", "constantRef", "entityRef", "enumerationRef", 
                         "functionRef", "parameterRef", "procedureRef", 
                         "ruleLabelRef", "ruleRef", "schemaRef", "subtypeConstraintRef", 
                         "typeLabelRef", "typeRef", "variableRef", "abstractEntityDeclaration", 
                         "abstractSupertype", "abstractSupertypeDeclaration", 
                         "actualParameterList", "addLikeOp", "aggregateInitializer", 
                         "aggregateSource", "aggregateType", "aggregationTypes", 
                         "algorithmHead", "aliasStmt", "arrayType", "assignmentStmt", 
                         "attributeDecl", "attributeId", "attributeQualifier", 
                         "bagType", "binaryType", "booleanType", "bound1", 
                         "bound2", "boundSpec", "builtInConstant", "builtInFunction", 
                         "builtInProcedure", "caseAction", "caseLabel", 
                         "caseStmt", "compoundStmt", "concreteTypes", "constantBody", 
                         "constantDecl", "constantFactor", "constantId", 
                         "constructedTypes", "declaration", "derivedAttr", 
                         "deriveClause", "domainRule", "element", "entityBody", 
                         "entityConstructor", "entityDecl", "entityHead", 
                         "entityId", "enumerationExtension", "enumerationId", 
                         "enumerationItems", "enumerationItem", "enumerationReference", 
                         "enumerationType", "escapeStmt", "explicitAttr", 
                         "expression", "factor", "formalParameter", "functionCall", 
                         "functionDecl", "functionHead", "functionId", "generalizedTypes", 
                         "generalAggregationTypes", "generalArrayType", 
                         "generalBagType", "generalListType", "generalRef", 
                         "generalSetType", "genericEntityType", "genericType", 
                         "groupQualifier", "ifStmt", "ifStmtStatements", 
                         "ifStmtElseStatements", "increment", "incrementControl", 
                         "index", "index1", "index2", "indexQualifier", 
                         "instantiableType", "integerType", "interfaceSpecification", 
                         "interval", "intervalHigh", "intervalItem", "intervalLow", 
                         "intervalOp", "inverseAttr", "inverseAttrType", 
                         "inverseClause", "listType", "literal", "localDecl", 
                         "localVariable", "logicalExpression", "logicalLiteral", 
                         "logicalType", "multiplicationLikeOp", "namedTypes", 
                         "namedTypeOrRename", "nullStmt", "numberType", 
                         "numericExpression", "oneOf", "parameter", "parameterId", 
                         "parameterType", "population", "precisionSpec", 
                         "primary", "procedureCallStmt", "procedureDecl", 
                         "procedureHead", "procedureHeadParameter", "procedureId", 
                         "qualifiableFactor", "qualifiedAttribute", "qualifier", 
                         "queryExpression", "realType", "redeclaredAttribute", 
                         "referencedAttribute", "referenceClause", "relOp", 
                         "relOpExtended", "renameId", "repeatControl", "repeatStmt", 
                         "repetition", "resourceOrRename", "resourceRef", 
                         "returnStmt", "ruleDecl", "ruleHead", "ruleId", 
                         "ruleLabelId", "schemaBody", "schemaBodyDeclaration", 
                         "schemaDecl", "schemaId", "schemaVersionId", "selector", 
                         "selectExtension", "selectList", "selectType", 
                         "setType", "simpleExpression", "simpleFactor", 
                         "simpleFactorExpression", "simpleFactorUnaryExpression", 
                         "simpleTypes", "skipStmt", "stmt", "stringLiteral", 
                         "stringType", "subsuper", "subtypeConstraint", 
                         "subtypeConstraintBody", "subtypeConstraintDecl", 
                         "subtypeConstraintHead", "subtypeConstraintId", 
                         "subtypeDeclaration", "supertypeConstraint", "supertypeExpression", 
                         "supertypeFactor", "supertypeRule", "supertypeTerm", 
                         "syntax", "term", "totalOver", "typeDecl", "typeId", 
                         "typeLabel", "typeLabelId", "unaryOp", "underlyingType", 
                         "uniqueClause", "uniqueRule", "untilControl", "useClause", 
                         "variableId", "whereClause", "whileControl", "width", 
                         "widthSpec" ];

    constructor(input) {
        super(input);
        this._interp = new antlr4.atn.ParserATNSimulator(this, atn, decisionsToDFA, sharedContextCache);
        this.ruleNames = Express_simpleParser.ruleNames;
        this.literalNames = Express_simpleParser.literalNames;
        this.symbolicNames = Express_simpleParser.symbolicNames;
    }

    get atn() {
        return atn;
    }



	attributeRef() {
	    let localctx = new AttributeRefContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 0, Express_simpleParser.RULE_attributeRef);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 398;
	        this.attributeId();
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	constantRef() {
	    let localctx = new ConstantRefContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 2, Express_simpleParser.RULE_constantRef);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 400;
	        this.constantId();
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	entityRef() {
	    let localctx = new EntityRefContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 4, Express_simpleParser.RULE_entityRef);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 402;
	        this.entityId();
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	enumerationRef() {
	    let localctx = new EnumerationRefContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 6, Express_simpleParser.RULE_enumerationRef);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 404;
	        this.enumerationId();
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	functionRef() {
	    let localctx = new FunctionRefContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 8, Express_simpleParser.RULE_functionRef);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 406;
	        this.functionId();
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	parameterRef() {
	    let localctx = new ParameterRefContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 10, Express_simpleParser.RULE_parameterRef);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 408;
	        this.parameterId();
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	procedureRef() {
	    let localctx = new ProcedureRefContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 12, Express_simpleParser.RULE_procedureRef);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 410;
	        this.procedureId();
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}


